# ros_ffmpeg_transport

./: .gitignore  README.md  docker-compose.yml  ffmpeg_ws.dockerfile
ffmpeg_bridge/: CMakeLists.txt  decoder_config.yaml  encoder_config.yaml  package.xml
ffmpeg_bridge/config/decoder/: h264.yaml  hevc.yaml
ffmpeg_bridge/config/encoder/: h264_recording.yaml  hevc_recording.yaml  low_latency_hevc.yaml  low_size_hevc.yaml
ffmpeg_bridge/include/av_wrapper/: codec.h  frame.h  macros.h  packet.h  video_decoder.h  video_encoder.h
ffmpeg_bridge/include/ffmpeg_bridge/: converters.h  decoding_forwarder.hpp  encoding_forwarder.hpp  formats.h
ffmpeg_bridge/python/: __init__.py  ffmpeg_bridge.py  utils.py
ffmpeg_bridge/src/: decoder_node.cpp  decoding_forwarder.cpp  encoder_node.cpp  encoding_forwarder.cpp
ffmpeg_bridge/src/lib/: converters.cpp  formats.cpp
ffmpeg_bridge/src/lib/av_wrapper/: codec.cpp  frame.cpp  packet.cpp  video_decoder.cpp  video_encoder.cpp
ffmpeg_interfaces/: CMakeLists.txt  package.xml
ffmpeg_interfaces/msg/: AVPacket.msg
