<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_bridge</name>
  <version>0.0.1</version>
  <description>This package provides nodes for encoding and decoding images provided by other nodes via sensor_msgs/msg/Image using ffmpeg codecs</description>
  <maintainer email="primus2011@gmail.com">clockworkRocker</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>ffmpeg_interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
